Correct alignment in small screen mode

--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -54,9 +54,23 @@
 
 @media (max-width: 800px) {
   .Main-dashboard {
-    display: flex;
+    display: grid;
+    grid-template-columns: 12em 1fr;
+    grid-template-rows: auto 1fr;
+    overflow-x: hidden;
     width: 100%;
-    height: 100%;
-    flex-direction: column;
+    height: 100vh;
+    
+  }
+  .Main-dashboard > .Sidebar {
+    grid-row: 1 / span 2;
+    transition: transform 0.3s ease;
+  }
+  .Main-dashboard > .Filter {
+    padding: 1rem;
+  }
+  .Main-dashboard > .Main-content {
+    padding: 2rem;
+    overflow-y: auto;
   }
 }
