--- a/dashboard/src/Mainstyle.css
+++ b/dashboard/src/Mainstyle.css
@@ -64,7 +64,7 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     .Main-title > h2 {
         width: 50%;
     }
@@ -72,6 +72,12 @@
         font-size: 16px;
     }
     .Circle > h4 {
-        font-size: 16px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 600px) {
+    .Circle > h4 {
+        font-size: 12px;
     }
 }
